--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = account-financial-tools
 	url = https://github.com/quilsoft-org/account-financial-tools.git
 	branch = 14.0
+[submodule "quilsoft-org/business-requirement"]
+	path = quilsoft-org/business-requirement
+	url = git@github.com:quilsoft-org/business-requirement
+	branch = 14.0
